started Building my server

--- a/09 - Node + WebServer/front/index.html
+++ b/09 - Node + WebServer/front/index.html
@@ -10,11 +10,11 @@
     <title>Cyber 4's application</title>
   </head>
   <body>
-    <form action="" class="formClass">
+    <form id="form" class="formClass">
         <h1 class="title mb-3">Cyber 4's Application</h1>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="name" placeholder="Name">
-            <label for="name">Name</label>
+            <input type="text" class="form-control" id="nameApp" placeholder="Name">
+            <label for="nameApp">Name</label>
           </div>
           <div class="form-floating mb-3">
             <input type="text" class="form-control" id="age" placeholder="Age">
@@ -24,7 +24,7 @@
             <input type="text" class="form-control" id="ability" placeholder="Ability">
             <label for="ability">Ability</label>
           </div>
-      <div class="submit">
+      <div id="submit" class="submit">
         <button class="btn btn-primary" type="submit">Submit Application</button>
       </div>
     </form>
